--- a/总结/经常看-警示.md
+++ b/总结/经常看-警示.md
@@ -1,2 +1,67 @@
+> * ### <font color=red>不能听命于自己者，就要受命于他人。</font>
+> * 永远不要试图鹤立鸡群，要远离那群鸡。
+---
+## 人是怎么废掉的？
+> ### 短，浅，傲，拖，耗，这五个字，你沾上就离废掉不远了，尤其是最后一个，简直是废人于无形。
+### 1、短。
+* 追求短期快感，放弃长期努力的超额回报。
+[x]
+|表头|表头|
+|----|----|
 
-> 1.永远不要试图鹤立鸡群，要远离那群鸡。
+* 写三五个回答，就妄想成为万粉大V。
+* 看两页巴菲特的书，就准备去投资赚钱。
+* 学一个月编程，想弄出下载量过亿的软件。
+> 这就是很多人脑海中的努力和上进，几乎就是妄想和心血来潮，只要不能立马见效，那就放弃。
+所以他们做真正上进的事情很难达到满足，反而容易满足于及时享乐之事，那种即时的正反馈很容易让他们上头，比如：
+
+* 没有节制的刷朋友圈、短视频、娱乐新闻，找那些炸眼球的标题。
+* 长时间玩游戏，通宵达旦打怪升级，沉迷于虚幻的成就感。
+* 通过键盘宣泄自己的不满，掩盖自己的自卑和阴暗，在网络上寻找存在感。
+> 这些事，很容易就能给人一时的快感，这种短暂的成就感，可以填补虚无的内心，但是却容易让一个人忘记时间，沉迷其中，最后就不知不觉的废掉了。
+如果你真的想提升自己，你最应该做的是长期专注于一件事，把它打磨成你的标签。
+
+## 2、浅。
+* 随波逐流，人云亦云，没有深度思考的能力。
+> 他说现在做自媒体赚钱，那我去做个自媒体；
+他说最近蔬菜要涨价，那我去屯一点蔬菜；
+她说这个男生不是个好东西，那我和他分手。
+* 一直都习惯于在别人的指使和帮助下做事情，沉迷于思维的舒适区，那怕身体再累，只要不让我动脑子怎么都行。
+
+* 从来不看自己没接触过的东西，很少参与创造性事物，对未来有期望，一直觉得自己很努力，但是仅仅局限于身体上的努力，从来没有好好思考过自己的方法上有没有什么问题。
+
+>这种人，很少获取高密度的信息，大多是被动的接受别人浅显的知识，成为别人观点的受众，忽略了自己的独立思考。
+这种人最容易被带节奏，哪天遇到个成功学大师，一下子就悟了，然后就废了。
+
+## 3、傲。
+> 这种傲，不是有实力的傲，而是用错位成就感来麻痹自己。
+就是专门拿自己的长处去吊打别人的短处，和体育生比成绩，和学霸比运动，和马云比长相。
+或者是忽略客观条件去跟别人比什么，比如一个北京的因为自己月薪比一个小县城的高就沾沾自喜，实际上人家月入一万比你月入两万都够用。
+这种错位的成就感，会造成一种“自己水平还不错”的假象，带给人强烈的优越感和满足感，欲仙欲死。
+自以为什么事情都懂，常常觉得自己比别人高明。不管别人说什么，都要插上两句嘴，被指出错误就感觉人家看不起你。觉得什么都会，样样都精通，遇到有人反驳，立即开启防护模式，像刺猬一样锋芒毕露。
+这种自嗨的感觉会想软绵绵的棉花一样，把一个人给封闭起来，让他忘记了努力，直到最后大梦初醒时才发现，自己已经被被人拉开这么大了。
+
+4、拖。
+* 遇事先回避，渴望有人能帮助解决，拒绝自我突破，习惯等待拯救。
+* 下班了但是你的表格还没做，等那个会做表格的同事来教你。
+* 灯泡坏了，等舍友回来再换新的。
+* 不会做的题，等老师讲最简便的方法。
+> 事实上,你等的那个同事早就下班回家，陪老婆孩子了。你在黑夜里瑟瑟发抖，祈求各路神明保佑，脑海里各种恐怖片循环播放，你舍友早就鼾声震天，还不忘砸吧嘴。
+而你的老师，这道题已经讲过了我们看下一题……
+给自己的拖延找借口，现在不想做的事，就说“再等等”“明天再说”“还没准备好呢”。然后你等没了机会，等走了女友，等丢了工作……
+总觉得“真正的生活还没开始”，对自己的期望非常大，今天没做到的明天多做一点，渴望用未来的时间弥补，过去的遗憾。
+活在自己虚构的蜜汁自信当中，幻想未来的自己，美好又幸福，却显少为当下拼搏。
+
+## 5、耗。
+> 这种耗，是自己跟自己耗，是情绪上的耗。
+
+想做一件事，又不敢去做，犹豫，纠结，原地踱步，徒增内耗。还没执行就先想了一大堆没用的，还没开始就想好失败的结果，自己和自己商讨了好几年，最后也没动手去做。
+跟别人在网上抬杠时无法控制自己的情绪，时间一分一秒地花在评论区的互怼中流逝而去，自己感觉自己忙了一整天，想想忙了些什么，自己也不知道。
+
+领导让你去端茶倒水，你非常不满，但是又不敢说，还不能接受，自己跟自己怄气，生了一天闷气，其实端茶就用了一分钟，但是你就这样耽误了自己一天，一直在自己跟自己耗。
+
+既不敢站起来，又不愿意跪着，就一直跪着生气，还不如买两幅护膝。
+
+不干实事，不愿接受，像一架坏掉的机器，通上电以后热的发烫，但就是不往前走。
+
+犹豫到底给不给我点赞，想了半天，一直没动，有这个功夫双击一下早就完事儿了，你纠结什么！
