添加备忘录

--- a/备忘录/知识目录/Markdown/语法.md
+++ b/备忘录/知识目录/Markdown/语法.md
@@ -1,2 +1,6 @@
-1. MarkDown 自动生成目录 [TOC]
+1. MarkDown 自动生成目录[TOC]
 在第一行开头写 [TOC] 必须是第一行，不可以在前面加别的东西。
+
+2.任务列表
+- [x] <font color=green>已完成</font>
+- [ ] <font color=red>未完成</font>
